logs/medusa.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/medusa'...
Compiling './lib/python3.5/site-packages/medusa/auth_handler.py'...
***   File "./lib/python3.5/site-packages/medusa/auth_handler.py", line 54
    print 'malformed authorization info <%s>' % cookie
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medusa/chat_server.py'...
***   File "./lib/python3.5/site-packages/medusa/chat_server.py", line 111
    print '%s started on port %d' % (self.SERVER_IDENT, port)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/event_loop.py'...
***   File "./lib/python3.5/site-packages/medusa/event_loop.py", line 70
    print 'Connected!'
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medusa/filesys.py'...
***   File "./lib/python3.5/site-packages/medusa/filesys.py", line 190
    def longify (self, (path, stat_info)):
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/ftp_server.py'...
***   File "./lib/python3.5/site-packages/medusa/ftp_server.py", line 281
    except socket.error, why:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/http_server.py'...
***   File "./lib/python3.5/site-packages/medusa/http_server.py", line 107
    raise ValueError, "Broken URI"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/monitor.py'...
***   File "./lib/python3.5/site-packages/medusa/monitor.py", line 96
    print repr(result)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/monitor_client.py'...
***   File "./lib/python3.5/site-packages/medusa/monitor_client.py", line 18
    print '\nclosed.'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medusa/monitor_client_win32.py'...
***   File "./lib/python3.5/site-packages/medusa/monitor_client_win32.py", line 30
    print 'Connection closed.  Hit <return> to exit'
                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medusa/put_handler.py'...
***   File "./lib/python3.5/site-packages/medusa/put_handler.py", line 92
    print 'orphaned %d bytes: <%s>' % (ld - chunk, repr(data[chunk:]))
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/resolver.py'...
***   File "./lib/python3.5/site-packages/medusa/resolver.py", line 393
    print 'usage: %s [-r] [-s <server_IP>] host [host ...]' % sys.argv[0]
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medusa/rpc_client.py'...
***   File "./lib/python3.5/site-packages/medusa/rpc_client.py", line 97
    print info
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/medusa/rpc_server.py'...
***   File "./lib/python3.5/site-packages/medusa/rpc_server.py", line 295
    print 'a thing has gone away %08x' % id(self)
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/virtual_handler.py'...
***   File "./lib/python3.5/site-packages/medusa/virtual_handler.py", line 22
    raise ValueError, "Virtual Hostname %s does not appear to be registered in the DNS" % hostname
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/medusa/xmlrpc_handler.py'...
***   File "./lib/python3.5/site-packages/medusa/xmlrpc_handler.py", line 94
    print 'method="%s" params=%s' % (method, params)
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/medusa-0.5.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
